<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/PrintPreviewConstraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrintPreviewFragment">

    <TextView
        android:id="@+id/textViewVehicleMake"
        android:layout_width="260dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:text="@string/PrintPreviewVehicleMake"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewVehicleModel"
        tools:text="@string/PrintPreviewVehicleMake" />

    <TextView
        android:id="@+id/textViewVehicleInfo"
        android:layout_width="125dp"
        android:layout_height="30dp"
        android:layout_marginTop="32dp"
        android:text="@string/PrintPreviewVehicleInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFineAmount" />

    <TextView
        android:id="@+id/textViewTicketID"
        android:layout_width="260dp"
        android:layout_height="30dp"
        android:layout_marginTop="24dp"
        android:text="@string/PrintPreviewTicketID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPreviewTicketInfo" />

    <TextView
        android:id="@+id/textViewFineAmount"
        android:layout_width="260dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:text="@string/PrintPreviewFineAmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewViolationType" />

    <TextView
        android:id="@+id/textViewLicensePlate"
        android:layout_width="260dp"
        android:layout_height="30dp"
        android:layout_marginTop="24dp"
        android:text="@string/PrintPreviewLicensePlate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewVehicleInfo" />

    <TextView
        android:id="@+id/textViewVehicleModel"
        android:layout_width="260dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:text="@string/PrintPreviewVehicleModel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLicensePlate" />

    <TextView
        android:id="@+id/textViewVehicleColor"
        android:layout_width="260dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:text="@string/PrintPreviewVehicleColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewVehicleMake"
        tools:text="@string/PrintPreviewVehicleColor" />

    <TextView
        android:id="@+id/textViewViolationType"
        android:layout_width="260dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:text="@string/PrintPreviewViolationType"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCitationLocation" />

    <TextView
        android:id="@+id/textViewCitationLocation"
        android:layout_width="260dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="76dp"
        android:text="@string/PrintPreviewCitationLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextViewReportingOfficer" />

    <TextView
        android:id="@+id/TextViewReportingOfficer"
        android:layout_width="260dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:text="@string/PrintPreviewReportingOfficer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewViolationTime" />

    <TextView
        android:id="@+id/textViewViolationTime"
        android:layout_width="260dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:text="@string/PrintPreviewViolationTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTicketID" />

    <TextView
        android:id="@+id/textViewPreviewTicketInfo"
        android:layout_width="119dp"
        android:layout_height="30dp"
        android:layout_marginTop="80dp"
        android:text="@string/PrintPreviewTicketInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>