<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/scan"
        android:id="@+id/scan_fragment"
        android:icon="@drawable/scan"
        />
    <item
        android:title="@string/editTicket"
        android:id="@+id/edit_ticket_fragment"
        android:icon="@drawable/edit_ticket"
        />
    <item
        android:title="@string/selectLot"
        android:id="@+id/select_lot_fragment"
        android:icon="@drawable/select_lot"
        />
    <item
        android:title="@string/logOut"
        android:id="@+id/log_out_fragment"
        android:icon="@drawable/log_out"
        />
</menu>


