...
        android:inputType="textPersonName|text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fillVehicleModel"
        app:layout_constraintTop_toBottomOf="@+id/fillVehicleColor" />

    <Button
        android:id="@+id/fillSavePrintButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="76dp"
...
        android:inputType="textPersonName|text"
        app:layout_constraintEnd_toStartOf="@+id/fillVehicleMake"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fillChooseTheStateSpinner" />

    <TextView
        android:id="@+id/fillAddCitations"
        android:layout_width="284dp"
        android:layout_height="67dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="28dp"
...
