<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="select_lot_fragment">


    <Spinner
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="378dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="508dp"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:entries="@array/parkingLots"/>


    <Button
        android:id="@+id/selectLotButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="112dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/rounded_button"
        android:gravity="center"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/confirm_lot"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/purple_700" />


</androidx.constraintlayout.widget.ConstraintLayout>