...
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edit_ticket_fragment">

    <Button
        android:id="@+id/editTicketSearchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="144dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/rounded_button"
...
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/purple_700" />

    <EditText
        android:id="@+id/editTicketSearchBox"
        android:layout_width="308dp"
        android:layout_height="54dp"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="332dp"
        android:hint="@string/editTicketID"
        android:inputType="text"
...
