<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectLotFragment">

    <Spinner
        android:id="@+id/selectLotSpinner"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="378dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="508dp"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:entries="@array/parkingLots"/>
</androidx.constraintlayout.widget.ConstraintLayout>