...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScanFragment">
    <!--Manual Entry Button Layout-->

    <androidx.camera.view.PreviewView
        android:id="@+id/previewView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></androidx.camera.view.PreviewView>



    <Button
        android:id="@+id/outlinedButton"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/white"
...
