...
                android:layout_height="match_parent"
                android:layout_marginBottom="65dp"
                android:padding="5dp">
            </RelativeLayout>

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottom_nav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                app:menu="@menu/bottom_nav">

            </com.google.android.material.bottomnavigation.BottomNavigationView>
...
